opam-version: "2.0"

name:    "countdown"
version: "0.4.0"
license: "MIT"

maintainer: "Aaron L. Zeng <me@bcc32.com>"
authors:    "Aaron L. Zeng <me@bcc32.com>"

homepage:    "https://github.com/bcc32/countdown"
bug-reports: "https://github.com/bcc32/countdown/issues"
dev-repo:    "git+https://github.com/bcc32/countdown"

build: [
  ["jbuilder" "subst"] {pinned}
  ["jbuilder" "build" "-p" name "-j" jobs]
]

depends: [
  "core" {>= "v0.11" & < "v0.12"}
]
