opam-version: "2.0"

name:    "countdown"
version: "0.4.0"
license: "MIT"

maintainer: "Aaron L. Zeng <me@bcc32.com>"
authors:    "Aaron L. Zeng <me@bcc32.com>"

homepage:    "https://github.com/bcc32/countdown"
bug-reports: "https://github.com/bcc32/countdown/issues"
dev-repo:    "git+https://github.com/bcc32/countdown"

build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]

depends: [
  "dune" {build & >= "1.0"}
  "core" {>= "v0.11" & < "v0.12"}
]
