opam-version: "2.0"

name:    "countdown"
synopsis: "Puzzle solver for the Countdown game show"
version: "0.4.0"
license: "MIT"

maintainer: "Aaron L. Zeng <me@bcc32.com>"
authors:    "Aaron L. Zeng <me@bcc32.com>"

homepage:    "https://github.com/bcc32/countdown"
bug-reports: "https://github.com/bcc32/countdown/issues"
dev-repo:    "git+https://github.com/bcc32/countdown"

build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]

depends: [
  "dune" {>= "2.0"}
  "core" {>= "v0.13" & < "v0.14"}
]
